--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,9 @@ rvm:
   # - rbx-18mode
   # - rbx-19mode
 # uncomment this line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
+bundler_args: --without development production
+
+script: bundle exec rspec spec --format documentation
+
+before_script:
+  - RAILS_ENV=test bundle exec rake db:reset
