--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,10 @@
 language: ruby
-rvm:
-  # - "1.8.7"
-  - "1.9.2"
-  # - "1.9.3"
-  # - jruby-18mode # JRuby in 1.8 mode
-  # - jruby-19mode # JRuby in 1.9 mode
-  # - rbx-18mode
-  # - rbx-19mode
+
+rvm: "1.9.2"
+
 # uncomment this line if your project needs to run something other than `rake`:
-bundler_args: --without development production
+bundler_args: --without development production assets
 
-script: bundle exec rspec spec --format documentation
+before_script: RAILS_ENV=test bundle exec rake db:reset
 
-before_script:
-  - RAILS_ENV=test bundle exec rake db:reset
+script: bundle exec rspec --format documentation
