--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ bundler_args: --without development production
 before_script: RAILS_ENV=test bundle exec rake db:reset
 
 script: bundle exec rspec --format documentation
+
+notifications:
+  recipients:
+  	- christophersbunting@gmail.com
